<resources>
    <string name="app_name">The Stock Quiz</string>
    <string name="appNameTitle">The Stock Quiz</string>
    <string name="helloBtn">Let\'s Begin</string>
    <string name="fromText">Made with love in Jax</string>
    <string name="splashAppTitle">The Stock Quiz</string>
    <string name="appShortBio">Knowledge going up, up, up!</string>
    <string name="captureYouTitle">Some basics...</string>
    <string name="namesubTilte">What\'s your name?</string>
    <string name="nextBtn">Next</string>
    <string name="understand_statement">I understand not to use this quiz as my only source to learn about the stock market. My investments are my risk.</string>
    <string name="doneBtn">Submit</string>
    <string name="result_title">Results</string>
    <string name="yes_text">I understand</string>
    <string name="no_text">I decline</string>
    <string name="try_again_toast">Try Again!</string>
    <string name="reaction_text">You scored %d out of 6 points!</string>
    <string name="quiz_score_toast">%d out of 6 points!</string>
    <string name="checkbox_one_answer">Ponzi Schemes</string>
    <string name="checkbox_two_answer">Pump and Dump Schemes</string>
    <string name="checkbox_three_answer">I take your money Fraud</string>
    <string name="checkbox_four_answer">Internet Fraud</string>
    <string name="question_six_text">What are the different types of fraud in the stock market?</string>
    <string name="question_five_text">Which is the best definition of selling short?</string>
    <string name="group_five_answer_one">Selling shares of a stock at a loss</string>
    <string name="group_five_answer_two">Selling borrowed shares of a stock</string>
    <string name="group_five_answer_three">Selling shares of a stock before it has reached its peak</string>
    <string name="group_four_answer_one">$0</string>
    <string name="group_four_answer_two">$250</string>
    <string name="group_four_answer_three">$500</string>
    <string name="question_four_text">You invest $500 to buy $1,000 worth of stock on margin. The value of the stock drops by 50%. You sell it. Approximately how much of your original $500 investment are you left with in the end?</string>
    <string name="question_three_text">Which of the following organizations insures you against your losses in the stock market?</string>
    <string name="group_three_answer_one">NRA</string>
    <string name="group_three_answer_two">SEC</string>
    <string name="group_three_answer_three">None of the above</string>
    <string name="group_two_answer_one">Corporate bond</string>
    <string name="group_two_answer_two">Not sure bond</string>
    <string name="group_two_answer_three">U.S. Treasury bond</string>
    <string name="question_two_text">Which type of bond is the safest?</string>
    <string name="question_one_text">If you buy a companies stock you...</string>
    <string name="group_one_answer_one">Own a part of that company</string>
    <string name="group_one_answer_two">Are liable for the companies debt</string>
    <string name="group_one_answer_three">Must be rich!</string>
    <string name="share_text">Share</string>
    <string name="new_quiz_text">New</string>

    <string-array name="question_answers">
        <item>Own a part of that company</item>
        <item>U.S. Treasury bond</item>
        <item>None</item>
        <item>$0</item>
        <item>Selling borrowed shares of a stock</item>

    </string-array>

</resources>
